swagger: add customers
